Project

General

Profile

Actions

Bug #10509

closed

[PATCH] vm_eval.c (rb_yield_splat): add missing GC guard

Bug #10509: [PATCH] vm_eval.c (rb_yield_splat): add missing GC guard

Added by normalperson (Eric Wong) almost 12 years ago. Updated over 11 years ago.

Status:
Closed
Target version:
ruby -v:
trunk
[ruby-core:66272]

Description

Nobody uses this function in our source tree, but maybe this
bug is triggered by certain C extensions.


Files

Updated by Anonymous almost 12 years ago Actions #1

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

Applied in changeset r48417.


vm_eval.c (rb_yield_splat): add missing GC guard

Nobody uses this function in our source tree, but maybe this
bug is triggered by certain C extensions.

[Bug #10509]

Updated by usa (Usaku NAKAMURA) almost 12 years ago Actions #2 [ruby-core:66355]

  • Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED to 2.0.0: DONE, 2.1: REQUIRED

Backported r48417 into ruby_2_0_0 at r48491.

Updated by nagachika (Tomoyuki Chikanaga) over 11 years ago Actions #3 [ruby-core:68154]

  • Backport changed from 2.0.0: DONE, 2.1: REQUIRED to 2.0.0: DONE, 2.1: DONE

Backported into ruyb_2_1 branch at r49630.

Actions

Also available in: PDF Atom