vm_eval.c (rb_yield_splat): add missing GC guard

Nobody uses this function in our source tree, but maybe this
bug is triggered by certain C extensions.

[Bug #10509]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@48417 b2dd03c8-39d4-4d8f-98ff-823fe69b080e